template/gpt-4o/row_72_update_7_template_20250407_152944.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  CloudFormation template to deploy a secure, web-based VS Code development environment on an EC2 instance with code-server, integrated with CloudFront for global access.

Parameters:
  InstanceType:
    Type: String
    Default: t3.micro
    Description: EC2 instance type
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
  CodeServerVersion:
    Type: String
    Default: '4.0.0'
    Description: Version of code-server to install

Mappings:
  CloudFrontIPRanges:
    us-east-1:
      IPRange: '205.251.192.0/19'
    us-west-2:
      IPRange: '204.246.168.0/22'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from CloudFront IP ranges
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !FindInMap [CloudFrontIPRanges, us-east-1, IPRange]
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !FindInMap [CloudFrontIPRanges, us-west-2, IPRange]

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles: [!Ref EC2Role]

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds: [!Ref SecurityGroup]
      IamInstanceProfile: !Ref InstanceProfile
      ImageId: ami-0a313d6098716f372 # Ubuntu 22.04 LTS AMI ID (example, may need update)
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get install -y curl
          curl -fsSL https://code-server.dev/install.sh | sh -s -- --version ${CodeServerVersion}
          systemctl enable --now code-server@$(whoami)

  CloudFrontDistribution:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        Origins:
          - Id: EC2Origin
            DomainName: !GetAtt EC2Instance.PublicDnsName
            CustomOriginConfig:
              HTTPPort: 8080
              HTTPSPort: 443
              OriginProtocolPolicy: http-only
        Enabled: true
        DefaultCacheBehavior:
          TargetOriginId: EC2Origin
          ViewerProtocolPolicy: allow-all
          ForwardedValues:
            QueryString: true
          MinTTL: 31536000

Outputs:
  CloudFrontURL:
    Description: URL of the CloudFront distribution
    Value: !Sub 'https://${CloudFrontDistribution.DomainName}'
  InstanceId:
    Description: Instance ID of the EC2 instance
    Value: !Ref EC2Instance
  InstancePublicDNS:
    Description: Public DNS of the EC2 instance
    Value: !GetAtt EC2Instance.PublicDnsName
  SecurityGroupId:
    Description: Security Group ID
    Value: !Ref SecurityGroup

# Note: Ensure that when deploying this template, a valid KeyName parameter is provided.
```

**Important Note:** When deploying this template, make sure to provide a valid `KeyName` parameter that corresponds to an existing EC2 KeyPair in your AWS account. This is necessary for SSH access to the EC2 instance. If you do not provide this parameter, the stack creation will fail.
